--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "0.26.1",
     "del": "2.2.2",
-    "enhanced-resolve": "^3.4.1",
+    "enhanced-resolve": "3.3.0",
     "es6-shim": "0.35.3",
     "eslint": "3.15.0",
     "eslint-config-xo-space": "0.15.0",
@@ -93,7 +93,7 @@
     "tslint": "4.4.2",
     "tslint-loader": "3.4.2",
     "typescript": "2.3.4",
-    "webpack": "2.2.1",
+    "webpack": "3.3.0",
     "webpack-fail-plugin": "1.0.5"
   },
   "scripts": {
